--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.susamlu.microservice</groupId>
-    <artifactId>micro-service</artifactId>
+    <groupId>org.susamlu.springmvc</groupId>
+    <artifactId>spring-mvc</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>micro-service</name>
-    <description>Demo project for micro service</description>
+    <name>spring-mvc</name>
+    <description>Demo project for Spring MVC</description>
 
     <modules>
-        <module>spring-mvc</module>
+        <module>spring-mvc-helloworld</module>
     </modules>
 
 </project>
