--- a/spring-mvc-helloworld/pom.xml
+++ b/spring-mvc-helloworld/pom.xml
@@ -10,12 +10,12 @@
         <relativePath/>
     </parent>
 
-    <groupId>org.susamlu.microservice</groupId>
-    <artifactId>spring-mvc</artifactId>
+    <groupId>org.susamlu.springmvc</groupId>
+    <artifactId>spring-mvc-helloworld</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-mvc</name>
+    <name>spring-mvc-helloworld</name>
     <description>Demo project for Spring MVC</description>
 
     <dependencies>
