--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>spring-mvc-helloworld</module>
+        <module>spring-mvc-validation</module>
     </modules>
 
 </project>
