--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>spring-mvc-helloworld</module>
         <module>spring-mvc-validation</module>
+        <module>spring-mvc-http-message-converter</module>
     </modules>
 
 </project>
