--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>spring-web-helloworld</module>
+        <module>spring-web-helloworld-explore</module>
         <module>spring-web-bean</module>
         <module>spring-web-validation</module>
         <module>spring-web-http-message-converter</module>
