--- a/spring-web-helloworld-explore/pom.xml
+++ b/spring-web-helloworld-explore/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.susamlu.springweb</groupId>
+            <artifactId>spring-web-helloworld-explore-sub</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
