--- a/spring-web-bean-declaration/pom.xml
+++ b/spring-web-bean-declaration/pom.xml
@@ -11,11 +11,11 @@
     </parent>
 
     <groupId>org.susamlu.springweb</groupId>
-    <artifactId>spring-web-bean</artifactId>
+    <artifactId>spring-web-bean-declaration</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-web-bean</name>
+    <name>spring-web-bean-declaration</name>
     <description>Demo project for Spring Web</description>
 
     <dependencies>
