feat: 修改 spring-web-bean-injection

--- a/spring-web-bean-injection/pom.xml
+++ b/spring-web-bean-injection/pom.xml
@@ -32,6 +32,13 @@
             <version>1.18.24</version>
         </dependency>
 
+        <!-- inject -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+
         <!-- test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
