--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-web-helloworld-explore/sub</module>
         <module>spring-web-bean-declaration</module>
         <module>spring-web-bean-injection</module>
+        <module>spring-web-bean-tag</module>
         <module>spring-web-config</module>
         <module>spring-web-config/sub</module>
         <module>spring-web-validation</module>
