--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-web-helloworld-explore</module>
         <module>spring-web-helloworld-explore/sub</module>
         <module>spring-web-bean-declaration</module>
+        <module>spring-web-bean-definition</module>
         <module>spring-web-bean-injection</module>
         <module>spring-web-bean-tag</module>
         <module>spring-web-config</module>
